<resources>
    <string name="app_name">AABCS-Trading</string>
    <string name="title_activity_profile_screen">ProfileScreen</string>
    <string name="title_home">Home</string>
    <string name="title_blog">Dashboard</string>
    <string name="title_profile">Notifications</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_nav_bar">NavBar</string>
    <string name="name_of_article" />
    <string name="name_of_author" />
    <string name="URL" />

    <string name="BuyButton">Buy</string>
    <string name="SellButton">Sell</string>
    <string name="DepositButton">Deposit</string>
    <string name="TextView1">AABCS Trading</string>
    <string name="Screen1BuyButton1">Buy?</string>
    <string name="Screen1BuyButton2">Buy?</string>
    <string name="Screen1BuyButton3">Buy?</string>
    <string name="MultiLine1">Select a company that you would like to buy:</string>
    <string name="Company1">Ford</string>
    <string name="Company2">Twitter</string>
    <string name="Company3">Apple</string>
    <string name="DepositText">How much would you like to deposit?</string>
</resources>